--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -173,7 +173,7 @@
                                                                         </a>
                                                                     </div>
                                                                 </div>
-                                                                <div id="004" [routerLinkActive]="['active']" [routerLink]="['reels']" >
+                                                                <div id="004" [routerLinkActive]="['active']" [routerLink]="['reels', 'Con7be3jz58']" >
                                                                     <div class="x1n2onr6">
                                                                         <a
                                                                             (mouseover)="this.mouseOverOptionNav(true, 'reels')" (mouseleave)="this.mouseOverOptionNav(false, 'reels')"
@@ -236,7 +236,7 @@
                                                                         </a>
                                                                     </div>
                                                                 </div>
-                                                                <div id="005" [routerLinkActive]="['active']" [routerLink]="['direct']" >
+                                                                <div id="005" [routerLinkActive]="['active']" [routerLink]="['direct/inbox']" >
                                                                     <div class="x1n2onr6">
                                                                         <a
                                                                             (mouseover)="this.mouseOverOptionNav(true, 'message')" (mouseleave)="this.mouseOverOptionNav(false, 'message')"
@@ -380,7 +380,7 @@
                                                                         </a>
                                                                     </div>
                                                                 </div>
-                                                                <div id="008" [routerLinkActive]="['active']" [routerLink]="['profile']" >
+                                                                <div id="008" [routerLinkActive]="['active']" [routerLink]="['lujandev']" >
                                                                     <div class="x1n2onr6">
                                                                         <div class="x1n2onr6">
                                                                             <a
@@ -454,7 +454,7 @@
                                                         <div class="x10l6tqk x1u3tz30 x1ja2u2z" #asSideSearch *ngIf="this.displaySideSearch" style="transform: translateX(0%);">
                                                             <app-sidebarsearch></app-sidebarsearch>
                                                         </div>
-                                                    <!-- / Barra lateral de búesqueda end -->
+                                                    <!-- / Barra lateral de búsqueda end -->
 
                                                     <!-- Barra lateral de Notificaciones start -->
                                                         <div class="x10l6tqk x1u3tz30 x1ja2u2z" *ngIf="this.displaySideNotification" style="transform: translateX(0%);">
