--- a/src/app/shared/components/main/nav/sidebarnotification/sidebarnotification.component.html
+++ b/src/app/shared/components/main/nav/sidebarnotification/sidebarnotification.component.html
@@ -15,7 +15,7 @@
                         <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xl565be x1xlr1w8 x5n08af x1tu3fi x3x7a5m x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:20px;">Ayer</span>
                     </div>
                     <div>
-                        <div class="x6s0dn4 x1q4h3jn x78zum5 x1y1aw1k xxbr6pl xwib8y2 xbbxn1n x87ps6o x1wq6e7o x1di1pr7 x1h4gsww xux34ky x1ypdohk x1l895ks">
+                        <div class="x6s0dn4 x1q4h3jn x78zum5 x1y1aw1k xxbr6pl xwib8y2 xbbxn1n x87ps6o x1wq6e7o x1di1pr7 x1h4gsww xux34ky x1ypdohk x1l895ks" id="x6s0dn4">
                             <div class="x2lah0s x14ju556 xr12ei9">
                                 <div class="_aarf _aarg" style="cursor: pointer;" role="button" tabindex="0" aria-disabled="false">
                                     <canvas class="_aarh" height="108" width="108" style="position: absolute; top: -5px; left: -5px; width: 54px; height: 54px;"></canvas>
@@ -28,7 +28,7 @@
                             </div>
 
                             <div class="x2lah0s x14ju556 x16n37ib">
-                                <button class="_acan _acap _acas _aj1-" type="button">
+                                <button class="_acan _acap _acas _aj1-" type="button" id="_aj1-">
                                     <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x150jy0e x1e558r4 x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s x1q0g3np xqjyukv x6s0dn4 x1oa3qoh xl56j7k" style="height: 100%;">
                                         <div class="_aacl _aaco _aacw _aad6 _aade">Seguir</div>
                                     </div>
@@ -923,7 +923,6 @@
                         </div>
                     </div>
                 </div>
-            
             <!-- / Anteriores end -->
         </div>
     </div>
