--- a/src/app/modules/usecases/components/reels/reels.component.html
+++ b/src/app/modules/usecases/components/reels/reels.component.html
@@ -6,125 +6,14 @@
                     <!-- Reel start -->
                     <div class="x78zum5 xedcshv" style="height: 792.9px;width: 446.006px;">
                         <div class="x1n2onr6 x78zum5 xl56j7k xh8yej3">
-                            <img alt="" class="xwzpupj x10l6tqk x1bs05mj x19991ni x1d8287x x5yr21d xuzhngd" referrerpolicy="origin-when-cross-origin" src="https://images.unsplash.com/photo-1534961165765-5c9795af911b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=707&q=80" style="filter: none; opacity: 1; width: 100%;">
-                            <div class="x1lcm9me x1yr5g0i xrt01vj x10y3i5r x6ikm8r x10wlt62 x5yr21d xh8yej3 x78zum5">
-                                <div class="x1lliihq x5yr21d x1n2onr6 xh8yej3 x1ja2u2z">
-                                    <div class="x5yr21d x1n2onr6 xh8yej3">
-                                        <div class="x5yr21d x1n2onr6 xh8yej3">
-                                            <div class="x5yr21d x1uhb9sk xh8yej3">
-                                                <video class="x1lliihq x5yr21d xh8yej3" playsinline="" preload="none" src="https://cdn.pixabay.com/vimeo/818020199/Le%C3%B3n%20-%20158980.mp4?width=1280&hash=fdd78ddf276ccb7b8bef70b6ec72dcfc79e62274" style="display: block;"></video>
-
-                                                <!-- Icono de volumen start -->
-                                                <div>
-                                                    <div class="x5yr21d x10l6tqk x13vifvy xh8yej3">
-                                                        <div class="x5yr21d xh8yej3 x78zum5 xdt5ytf">
-                                                            <div class="x1ey2m1c x9f619 xds687c x10l6tqk x17qophe x13vifvy x1ypdohk" role="presentation">
-                                                                <div class="x10l6tqk x78zum5 x1qughib xdt5ytf x17qophe xds687c x13vifvy x1ey2m1c xutac5l" aria-disabled="false" role="button" tabindex="0" style="cursor: pointer;">
-                                                                    <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1emribx x1uhb9sk x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv xuk3077 x1oa3qoh x1nhvcw1">
-                                                                        <div class="x1i10hfl x6umtig x1b1mbwd xaqea5y xav7gou x9f619 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz x6s0dn4 x78zum5 xjbqb8w x1ejq31n xd10rxx x1sy0etr x17r0tee x1ypdohk xl56j7k x1y1aw1k x1sxyh0 xwib8y2 xurb0ha">
-                                                                            <div class="x78zum5 x6s0dn4 xl56j7k xdt5ytf">
-                                                                                <div class="x78zum5 x6s0dn4 xl56j7k x10w6t97 x1td3qas x14yjl9h xudhj91 x18nykt9 xww2gxu xbka19w x6ikm8r x10wlt62">
-                                                                                    <svg aria-label="El audio está silenciado" class="x1lliihq x1n2onr6" color="rgb(255, 255, 255)" fill="rgb(255, 255, 255)" height="12" role="img" viewBox="0 0 48 48" width="12"><title>El audio está silenciado</title><path clip-rule="evenodd" d="M1.5 13.3c-.8 0-1.5.7-1.5 1.5v18.4c0 .8.7 1.5 1.5 1.5h8.7l12.9 12.9c.9.9 2.5.3 2.5-1v-9.8c0-.4-.2-.8-.4-1.1l-22-22c-.3-.3-.7-.4-1.1-.4h-.6zm46.8 31.4-5.5-5.5C44.9 36.6 48 31.4 48 24c0-11.4-7.2-17.4-7.2-17.4-.6-.6-1.6-.6-2.2 0L37.2 8c-.6.6-.6 1.6 0 2.2 0 0 5.7 5 5.7 13.8 0 5.4-2.1 9.3-3.8 11.6L35.5 32c1.1-1.7 2.3-4.4 2.3-8 0-6.8-4.1-10.3-4.1-10.3-.6-.6-1.6-.6-2.2 0l-1.4 1.4c-.6.6-.6 1.6 0 2.2 0 0 2.6 2 2.6 6.7 0 1.8-.4 3.2-.9 4.3L25.5 22V1.4c0-1.3-1.6-1.9-2.5-1L13.5 10 3.3-.3c-.6-.6-1.5-.6-2.1 0L-.2 1.1c-.6.6-.6 1.5 0 2.1L4 7.6l26.8 26.8 13.9 13.9c.6.6 1.5.6 2.1 0l1.4-1.4c.7-.6.7-1.6.1-2.2z" fill-rule="evenodd"></path></svg>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <!-- / Icono de volumen end -->
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <app-videoreels></app-videoreels>
                         </div>
                     </div>
                     <!-- / Reel end -->
 
                     <!-- Button lateral start -->
                     <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x12nagc x1uhb9sk x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x6s0dn4 x1oa3qoh x13a6bvl x16n37ib x1247r65">
-
-                        <div class="x6s0dn4 x1ypdohk x78zum5 xdt5ytf xieb3on">
-                            <span>
-                                <button class="_abl- _abm2" type="button">
-                                    <!-- <div class="_abm0 _abm1">
-                                        <svg aria-label="Me gusta" class="x1lliihq x1n2onr6" color="rgb(142, 142, 142)" fill="rgb(142, 142, 142)" height="24" role="img" viewBox="0 0 24 24" width="24"><title>Me gusta</title><path d="M16.792 3.904A4.989 4.989 0 0 1 21.5 9.122c0 3.072-2.652 4.959-5.197 7.222-2.512 2.243-3.865 3.469-4.303 3.752-.477-.309-2.143-1.823-4.303-3.752C5.141 14.072 2.5 12.167 2.5 9.122a4.989 4.989 0 0 1 4.708-5.218 4.21 4.21 0 0 1 3.675 1.941c.84 1.175.98 1.763 1.12 1.763s.278-.588 1.11-1.766a4.17 4.17 0 0 1 3.679-1.938m0-2a6.04 6.04 0 0 0-4.797 2.127 6.052 6.052 0 0 0-4.787-2.127A6.985 6.985 0 0 0 .5 9.122c0 3.61 2.55 5.827 5.015 7.97.283.246.569.494.853.747l1.027.918a44.998 44.998 0 0 0 3.518 3.018 2 2 0 0 0 2.174 0 45.263 45.263 0 0 0 3.626-3.115l.922-.824c.293-.26.59-.519.885-.774 2.334-2.025 4.98-4.32 4.98-7.94a6.985 6.985 0 0 0-6.708-7.218Z"></path></svg>
-                                    </div> -->
-                                    <div class="_abm0 _abl_">
-                                        <span>
-                                            <svg aria-label="Me gusta" class="x1lliihq x1n2onr6" color="rgb(38, 38, 38)" fill="rgb(38, 38, 38)" height="24" role="img" viewBox="0 0 24 24" width="24"><title>Me gusta</title><path d="M16.792 3.904A4.989 4.989 0 0 1 21.5 9.122c0 3.072-2.652 4.959-5.197 7.222-2.512 2.243-3.865 3.469-4.303 3.752-.477-.309-2.143-1.823-4.303-3.752C5.141 14.072 2.5 12.167 2.5 9.122a4.989 4.989 0 0 1 4.708-5.218 4.21 4.21 0 0 1 3.675 1.941c.84 1.175.98 1.763 1.12 1.763s.278-.588 1.11-1.766a4.17 4.17 0 0 1 3.679-1.938m0-2a6.04 6.04 0 0 0-4.797 2.127 6.052 6.052 0 0 0-4.787-2.127A6.985 6.985 0 0 0 .5 9.122c0 3.61 2.55 5.827 5.015 7.97.283.246.569.494.853.747l1.027.918a44.998 44.998 0 0 0 3.518 3.018 2 2 0 0 0 2.174 0 45.263 45.263 0 0 0 3.626-3.115l.922-.824c.293-.26.59-.519.885-.774 2.334-2.025 4.98-4.32 4.98-7.94a6.985 6.985 0 0 0-6.708-7.218Z"></path></svg>
-                                        </span>
-                                    </div>
-                                </button>
-                            </span>
-                            <div class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz" role="button" tabindex="0">
-                                <div class="x78zum5 x6s0dn4 x1gslohp">
-                                    <div class="xezivpi">
-                                        <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye x1fhwpqd xo1l8bm x5n08af x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:16px;"><span>59,2&nbsp;mil</span></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="x6s0dn4 x1ypdohk x78zum5 xdt5ytf xieb3on">
-                            <div class="x1i10hfl x6umtig x1b1mbwd xaqea5y xav7gou x9f619 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz x6s0dn4 x78zum5 xjbqb8w x1ejq31n xd10rxx x1sy0etr x17r0tee x1ypdohk xl56j7k xexx8yu x4uap5 x18d9i69 xkhd6sd" role="button" tabindex="0">
-                                <div class="x78zum5 x6s0dn4 xl56j7k xdt5ytf">
-                                    <svg aria-label="Comentario" class="x1lliihq x1n2onr6" color="rgb(38, 38, 38)" fill="rgb(38, 38, 38)" height="24" role="img" viewBox="0 0 24 24" width="24"><title>Comentario</title><path d="M20.656 17.008a9.993 9.993 0 1 0-3.59 3.615L22 22Z" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"></path></svg>
-
-                                    <div class="x78zum5 x6s0dn4 x1gslohp">
-                                        <div class="xezivpi">
-                                            <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye x1fhwpqd xo1l8bm x5n08af x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:16px;"><span>771</span></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="x78zum5 x6s0dn4 x1chd833">
-                            <div aria-expanded="false" aria-haspopup="menu" class="x1i10hfl x6umtig x1b1mbwd xaqea5y xav7gou x9f619 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz x6s0dn4 x78zum5 xjbqb8w x1ejq31n xd10rxx x1sy0etr x17r0tee x1ypdohk xl56j7k xexx8yu x4uap5 x18d9i69 xkhd6sd" role="button" tabindex="0">
-                                <div class="x78zum5 x6s0dn4 xl56j7k xdt5ytf">
-                                    <svg aria-label="Directo" class="x1lliihq x1n2onr6" color="rgb(38, 38, 38)" fill="rgb(38, 38, 38)" height="24" role="img" viewBox="0 0 24 24" width="24"><title>Directo</title><line fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2" x1="22" x2="9.218" y1="3" y2="10.083"></line><polygon fill="none" points="11.698 20.334 22 3.001 2 3.001 9.218 10.084 11.698 20.334" stroke="currentColor" stroke-linejoin="round" stroke-width="2"></polygon></svg>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="x78zum5 x6s0dn4 x1chd833">
-                            <div>
-                                <div aria-disabled="false" role="button" tabindex="0" style="cursor: pointer;">
-                                    <button class="_abl- _abm2" type="button">
-                                        <!-- <div class="_abm0 _abm1">
-                                            <svg aria-label="Guardar" class="x1lliihq x1n2onr6" color="rgb(115, 115, 115)" fill="rgb(115, 115, 115)" height="24" role="img" viewBox="0 0 24 24" width="24"><title>Guardar</title><polygon fill="none" points="20 21 12 13.44 4 21 4 3 20 3 20 21" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></polygon></svg>
-                                        </div> -->
-                                        <div class="_abm0 _abl_">
-                                            <svg aria-label="Guardar" class="x1lliihq x1n2onr6" color="rgb(0, 0, 0)" fill="rgb(0, 0, 0)" height="24" role="img" viewBox="0 0 24 24" width="24"><title>Guardar</title><polygon fill="none" points="20 21 12 13.44 4 21 4 3 20 3 20 21" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></polygon></svg>
-                                        </div>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="x78zum5 x6s0dn4 x1chd833">
-                            <div class="x1i10hfl x6umtig x1b1mbwd xaqea5y xav7gou x9f619 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz x6s0dn4 x78zum5 xjbqb8w x1ejq31n xd10rxx x1sy0etr x17r0tee x1ypdohk xl56j7k xexx8yu x4uap5 x18d9i69 xkhd6sd" role="button" tabindex="0">
-                                <div class="x78zum5 x6s0dn4 xl56j7k xdt5ytf">
-                                    <svg aria-label="Más" class="x1lliihq x1n2onr6" color="rgb(38, 38, 38)" fill="rgb(38, 38, 38)" height="24" role="img" viewBox="0 0 24 24" width="24"><title>Más</title><circle cx="12" cy="12" r="1.5"></circle><circle cx="6" cy="12" r="1.5"></circle><circle cx="18" cy="12" r="1.5"></circle></svg>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="xxk0z11 xvy4d1p x1lcm9me x1yr5g0i xrt01vj x10y3i5r x6ikm8r x10wlt62 xj34u2y x3527qa x1844e7p x1kv0z4h x1qihbgi">
-                            <a class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd" href="/reels/audio/663086625446120/" role="link" tabindex="0">
-                                <div class="_aagu">
-                                    <div class="_aagv">
-                                        <img alt="Imagen del audio" crossorigin="anonymous" class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3 x1lcm9me x1yr5g0i xrt01vj x10y3i5r" src="https://images.unsplash.com/photo-1534961165765-5c9795af911b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=707&q=80" style="object-fit: cover;">
-                                    </div>
-                                    <div class="_aagw"></div>
-                                </div>
-                            </a>
-                        </div>
-
+                        <app-sidereels></app-sidereels>
                     </div>
                     <!-- / Button lateral end -->
                 </div>
