--- a/src/app/modules/usecases/components/explore/explore.component.html
+++ b/src/app/modules/usecases/components/explore/explore.component.html
@@ -1,1 +1,11 @@
-<p>explore works!</p>
+<section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r xg6iff7">
+    <main class="x78zum5 xdt5ytf x1iyjqo2 x182iqb8 xvbhtw8" role="main">
+        <div class="_ac-t _ac-u _ac-v">
+            <div class="_acgg">
+                <div style="position: relative; display: flex; flex-direction: column; padding-bottom: 0px; padding-top: 0px;">
+                    <app-gridposts></app-gridposts>
+                </div>
+            </div>
+        </div>
+    </main>
+</section>
