--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -157,6 +157,14 @@
 		background-size: 440px 411px;
 		background-position: -380px -96px;
 	}
+    ._9-j_ {
+        background-size: 440px 411px;
+		background-position: -382px -223px;
+    }
+    ._9-k0 {
+        background-size: 440px 411px;
+		background-position: -382px -263px;
+    }
 }
 
 @media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
