--- a/src/styles.css
+++ b/src/styles.css
@@ -3280,12 +3280,7 @@ button._acat:hover {
   height: 20px;
   width: 20px;
 }
-/*@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
-  ._9-lv {
-    background-size: 440px 411px;
-    background-position: -380px -96px;
-  }
-}*/
+
 .xhtitgo {
   z-index: 2;
 }
@@ -3558,4 +3553,165 @@ video {
 }
 
 
+/* CSS Explorer */
+@media (min-width: 736px){
+._ac-v {
+    padding-top: 24px;
+}}
+@media (min-width: 736px){
+._ac-u {
+    padding-top: 60px;
+}}
+@media (min-width: 736px){
+._ac-t {
+    box-sizing: content-box;
+    max-width: 935px;
+    padding: 40px 20px 0;
+    width: calc(100% - 40px);
+}
+._ac-t {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin: 0 auto 30px;
+    width: 100%;
+}}
 
+@media (min-width: 736px){
+._acgg {
+    margin: 0 -28px 0 0;
+}}
+._acgg {
+    display: flex;
+    flex-direction: column;
+    margin-right: -2px;
+    position: relative;
+}
+
+@media (min-width: 736px){
+._al5y {
+    width: calc(33.3333% - 4px);
+}}
+@media (min-width: 736px){
+._al5u {
+    margin: 0 4px 4px 0;
+    width: calc(33.3333% - 4px);
+}}
+._ab71, ._al5y {
+    width: calc(33.3333% - var(--mobile-grid-item-margin));
+}
+._ab74 {
+    float: right;
+}
+._ab70, ._al5u {
+    align-items: stretch;
+    border: 0;
+    box-sizing: border-box;
+    display: block;
+    flex-direction: column;
+    flex-shrink: 0;
+    float: left;
+    font: inherit;
+    font-size: 100%;
+    margin: var(--mobile-grid-item-margin) var(--mobile-grid-item-margin) 0 0;
+    padding: 0;
+    position: relative;
+    vertical-align: baseline;
+    width: calc(33.3333% - var(--mobile-grid-item-margin));
+}
+
+@media (min-width: 736px){
+._al5s._al5s {
+    padding-bottom: calc(200% + 4px);
+}}
+._aero._aero, ._al5s._al5s {
+    padding-bottom: calc(200% + var(--mobile-grid-item-margin));
+}
+@media (min-width: 736px){
+._acg8 {
+    margin: 15px 15px 0 0;
+}}
+._acg8 {
+    align-items: flex-end;
+    border: 0;
+    bottom: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    font: inherit;
+    font-size: 100%;
+    justify-content: flex-start;
+    left: 0;
+    margin: 5px 5px 0 0;
+    padding: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+    vertical-align: baseline;
+}
+._ab74 {
+    float: right;
+}
+
+._ab73 {
+  float: left;
+}
+._ac2d {
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+._abpo {
+  align-items: center;
+  border: 0;
+  display: flex;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+  width: 100%;
+}
+._abpm {
+  border: 0;
+  display: inline-flex;
+  flex-direction: row-reverse;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  margin-right: 30px;
+  padding: 0;
+  vertical-align: baseline;
+}
+
+._abpn {
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  margin-right: 7px;
+  margin-top: 2px;
+  padding: 0;
+  vertical-align: baseline;
+}
+
+._9-j_ {
+  background-repeat: no-repeat;
+  height: 19px;
+  width: 19px;
+}
+
+._9-k0 {
+  background-repeat: no-repeat;
+  height: 19px;
+  width: 19px;
+}
