--- a/src/styles.css
+++ b/src/styles.css
@@ -3715,3 +3715,162 @@ video {
   height: 19px;
   width: 19px;
 }
+
+
+
+/* Css Inbox */
+.xmz0i5r {
+  max-height: 100%;
+}
+._aa5b {
+  align-items: center;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 20px;
+  position: relative;
+  vertical-align: baseline;
+  width: 100%;
+}
+.xopu45v {
+  border-right-color: rgb(var(--ig-separator));
+}
+.xmo9t06 {
+  border-left-color: rgb(var(--ig-separator));
+}
+.x5ur3kl {
+  border-top-color: rgb(var(--ig-separator));
+}
+.x1bs97v6 {
+  border-bottom-color: rgb(var(--ig-separator));
+}
+.x178xt8z {
+  border-top-width: 1px;
+}
+.x13fuv20 {
+  border-top-style: solid;
+}
+.x10y3i5r {
+  border-bottom-left-radius: 4px;
+}
+.x10wlt62 {
+  overflow-y: hidden;
+}
+._aa5c {
+  align-items: stretch;
+  background-color: rgb(var(--ig-primary-background));
+  border: 0;
+  border-right: 1px solid rgb(var(--ig-elevated-separator));
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+  width: 350px;
+}
+._aa4j {
+  background-color: rgb(var(--ig-primary-background));
+  border-bottom: 1px solid rgb(var(--ig-elevated-separator));
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-size: 16px;
+  font-weight: 600;
+  height: 60px;
+  padding: 0 20px;
+  width: 100%;
+  z-index: 2;
+}
+._aa4k {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  height: inherit;
+  justify-content: space-between;
+  width: 100%;
+}
+._aa4o {
+  align-items: center;
+  color: rgb(var(--ig-primary-text));
+  display: inline-block;
+  flex-basis: 0px;
+  flex-grow: 1;
+  flex-shrink: 1;
+  justify-content: center;
+  min-width: 0;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+._acao, ._acao:visited, a._acao, a._acao:visited {
+  border: 0;
+  color: rgb(var(--ig-primary-button));
+  display: inline-block;
+  padding: 0!important;
+  position: relative;
+}
+._abyj {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 10;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+._aa4p {
+  justify-content: flex-end;
+  margin-left: 8px;
+}
+._aa4m {
+  display: flex;
+  flex-basis: 32px;
+  flex-direction: row;
+}
+.x1p5oq8j {
+  padding-top: 24px;
+}
+.x1ms8i2q {
+  font-size: var(--system-20-font-size);
+}
+.xqui205 {
+  margin-top: 24px;
+}
+._abyl {
+  height: calc(100% - 44px);
+  overflow: hidden;
+}
+._abyk {
+  background: rgb(var(--ig-primary-background));
+  -webkit-overflow-scrolling: touch;
+  overscroll-behavior: contain;
+  padding-top: 8px;
+}
+.x5ib6vp {
+  padding-left: 20px;
+}
+.xc73u3c {
+  padding-right: 20px;
+}
